Fix(web): Modification of the Collapse component toggling behavior, Collapse example

--- a/packages/web/src/scss/components/Collapse/_Collapse.scss
+++ b/packages/web/src/scss/components/Collapse/_Collapse.scss
@@ -7,13 +7,16 @@
     height: 0;
     overflow: hidden;
     visibility: hidden;
-    transition-property: height;
-    transition-duration: theme.$collapse-transition-duration;
-    transition-timing-function: theme.$collapse-transition-timing;
 
     &.is-open,
     &.is-transitioning {
         visibility: visible;
+    }
+
+    &.is-transitioning {
+        transition-property: height;
+        transition-duration: theme.$collapse-transition-duration;
+        transition-timing-function: theme.$collapse-transition-timing;
     }
 
     &.is-open:not(.is-transitioning) {
